[package]
name = "asciifarm"
version = "0.1.0"
authors = ["troido <troido@protonmail.com>"]
edition = "2018"

[dependencies]
mio-uds = "0.6"
mio = "0.6"
slab = "0.4.2"
nix = "0.13"
libc = "0.2"
users = "0.8"
specs = { version = "0.16", features = ["specs-derive"] }
rand = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.1", features = ["termination"] }
structopt = "0.3"
